--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <hr>
 
       <footer>
-        <p>&copy; Jane Student 2015</p>
+        <p>&copy; Aaron Highlands Student WebDev Seattle U 2016</p>
       </footer>
     </div> <!-- /container -->
 
